--- a/index.html
+++ b/index.html
@@ -61,16 +61,20 @@
                 <div class="bLeft">
                     <div class="description"><h2>Skills</h2></div>
                     <div id="skills">
-                        <div class="sk1"><p>HTML<i class="fa fa-html5" title="HTML5"></i><span>90%</span></p></div>
-                        <div class="sk2"><p>CSS<i class="fa fa-css3" title="CSS3"></i><span>75%</span></p></div>
+                        <div class="sk1"><p>HTML<span>90%</span></p></div>
+                        <div class="sk2"><p>CSS<span>75%</span></p></div>
                         <div class="sk3"><p>SEO<span>80%</span></p></div>
                         <div class="sk4"><p>JavaScript<span>65%</span></p></div>
                     </div>
                 </div>
-                <div class="bRight">
-                    <div class="description"><h2>Projects</h2></div>
-                            <h2>School project</h2>
-                    <a href="http://www.osaksentije.byethost7.com/"><img src="img/project.jpg" alt="project"/></a>
+                <div class="bLeft">
+                    <div class="description"><h2>Progress</h2></div>
+                    <div id="skills">
+                        <div class="sk3"><p>jQuery<span>80%</span></p></div>
+                        <div class="sk1"><p>Database<span>90%</span></p></div>
+                        <div class="sk3"><p>Bootstrap<span>80%</span></p></div>
+                        <div class="sk2"><p>Materialize<span>75%</span></p></div>
+                    </div>
                 </div>
             </div>
             <div id="icon">
@@ -84,7 +88,7 @@
                 </div>
                 <div class="icons">
                     <div class="iIcons">
-                        <i class="fa fa-mobile-phone"></i>
+                        <i class="fa fa-desktop"></i>
                     </div>
                     <div class="tIcons">
                         <p>My layouts will work on any device, big or small.</p>
@@ -105,6 +109,23 @@
                     <div class="tIcons">
                         <p>Let's create the future together!</p>
                     </div>
+                </div>
+            </div>
+            <div id="projects">
+                <div class="pro hov">
+                    <h2>School project</h2>
+                    <p>The website was created for web design subject exam. It's non responsive and it's my first hosted website.</p>
+                    <a href="http://www.osaksentije.byethost7.com/"><img src="img/output2.png" alt="project"/></a>
+                </div>
+                <div class="pro">
+                    <h2>Home project</h2>
+                    <p>The website was created for the purpose of learning. It's one of the first designed for user interface design.</p>
+                    <img src="img/output.png" alt="project"/>
+                </div>
+                <div class="pro">
+                    <h2>Home project</h2>
+                    <p>The website was created for the purpose of learning. Website was made in Bootstrap.</p>
+                    <img src="img/output3.png" alt="project1"/>
                 </div>
             </div>
             <div id="location">
@@ -140,6 +161,8 @@
                             <a href="sitemap.xml" title="Sitemap" target="_blank"><i class="fa fa-sitemap"></i></a>
                             <a href="rss.xml" title="RSS" target="_blank"><i class="fa fa-rss-square"></i></a>
                             <a href="css/style.scss" title="Sass" target="_blank"><i class='fab fa-sass'></i></a>
+                            <a href="css/style.css" title="Style" target="_blank"><i class="fa fa-css3"></i></a>
+                            <a href="css/query.css" title="RSS" target="_blank"><i class="fa fa-mobile-phone"></i></a>
                         </div>
                     </div>
                 </div>
