--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                             <a href="rss.xml" title="RSS" target="_blank"><i class="fa fa-rss-square"></i></a>
                             <a href="css/style.scss" title="Sass" target="_blank"><i class='fab fa-sass'></i></a>
                             <a href="css/style.css" title="Style" target="_blank"><i class="fa fa-css3"></i></a>
-                            <a href="css/query.css" title="RSS" target="_blank"><i class="fa fa-mobile-phone"></i></a>
+                            <a href="css/query.css" title="Query" target="_blank"><i class="fa fa-mobile-phone"></i></a>
                         </div>
                     </div>
                 </div>
