--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
                     <div class="description"><h2>Skills</h2></div>
                     <div id="skills">
                         <div class="sk1"><p>HTML<span>90%</span></p></div>
-                        <div class="sk2"><p>CSS<span>75%</span></p></div>
+                        <div class="sk2"><p>CSS<span>85%</span></p></div>
                         <div class="sk3"><p>SEO<span>80%</span></p></div>
-                        <div class="sk4"><p>JavaScript<span>65%</span></p></div>
+                        <div class="sk4"><p>JavaScript<span>75%</span></p></div>
                     </div>
                 </div>
                 <div class="bLeft">
@@ -73,7 +73,7 @@
                         <div class="sk3"><p>jQuery<span>80%</span></p></div>
                         <div class="sk1"><p>Database<span>90%</span></p></div>
                         <div class="sk3"><p>Bootstrap<span>80%</span></p></div>
-                        <div class="sk2"><p>Materialize<span>75%</span></p></div>
+                        <div class="sk2"><p>PHP<span>75%</span></p></div>
                     </div>
                 </div>
             </div>
@@ -122,10 +122,10 @@
                     <p>The website was created for the purpose of learning. It's one of the first designed for user interface design.</p>
                     <img src="img/output.png" alt="project"/>
                 </div>
-                <div class="pro">
+                <div class="pro hov">
                     <h2>Home project</h2>
-                    <p>The website was created for the purpose of learning. Website was made in Bootstrap.</p>
-                    <img src="img/output3.png" alt="project1"/>
+                    <p>The site was created using JavaScript and jQuery technology.</p>
+                    <a href="https://nbrzovan.github.io/iphoneStore/index.html"><img src="img/output3.png" alt="project1"/></a>
                 </div>
             </div>
             <div id="location">
@@ -149,7 +149,7 @@
                            <div class="infFafa"><i class="fa fa-address-card-o"></i></a></div><p>Nikola Brzovan</p>
                         </div>
                         <div class="infoAbout">
-                            <div class="infFafa"><a href="mailto:nikola.brzovan123@gmail.com"><i class="fa fa-envelope-open-o"></a></i></div><p>brzovan@gmail.com</p>
+                            <div class="infFafa"><a href="mailto:nikola.brzovan123@gmail.com"><i class="fa fa-envelope-open-o"></a></i></div><p>nikola.brzovan123@gmail.com</p>
                         </div>
                         <div class="infoAbout">
                             <div class="infFafa"><a href="tel:+3816312312312"><i class="fa fa-phone"></i></a></div><p>+38163/123-123-12</p>
