--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="#ab">About</a></li>
-                    <li><a href="#blk">Skills</a></li>
+                    <li><a href="#projects">Skills</a></li>
                     <li><a href="#con">Contact</a></li>
                 </ul>
             </nav>
@@ -53,27 +53,7 @@
                 </div>
                 <div class="bRight">
                     <div id="position">
-                        <img src="img/myPic.png" alt="autor"/>
-                    </div>
-                </div>
-            </div>
-            <div class="block" id="blk">
-                <div class="bLeft">
-                    <div class="description"><h2>Skills</h2></div>
-                    <div id="skills">
-                        <div class="sk1"><p>HTML<span>90%</span></p></div>
-                        <div class="sk2"><p>CSS<span>85%</span></p></div>
-                        <div class="sk3"><p>SEO<span>80%</span></p></div>
-                        <div class="sk4"><p>JavaScript<span>75%</span></p></div>
-                    </div>
-                </div>
-                <div class="bLeft">
-                    <div class="description"><h2>Progress</h2></div>
-                    <div id="skills">
-                        <div class="sk3"><p>jQuery<span>80%</span></p></div>
-                        <div class="sk1"><p>Database<span>90%</span></p></div>
-                        <div class="sk3"><p>Bootstrap<span>80%</span></p></div>
-                        <div class="sk2"><p>PHP<span>75%</span></p></div>
+                        <img src="img/author.png" alt="autor"/>
                     </div>
                 </div>
             </div>
@@ -115,17 +95,17 @@
                 <div class="pro hov">
                     <h2>School project</h2>
                     <p>The website was created for web design subject exam. It's non responsive and it's my first hosted website.</p>
-                    <a href="http://www.osaksentije.byethost7.com/"><img src="img/output2.png" alt="project"/></a>
-                </div>
-                <div class="pro">
-                    <h2>Home project</h2>
-                    <p>The website was created for the purpose of learning. It's one of the first designed for user interface design.</p>
-                    <img src="img/output.png" alt="project"/>
+                    <a href="http://www.osaksentije.byethost7.com/" target="_blank"><img src="img/output2.png" alt="project"/></a>
                 </div>
                 <div class="pro hov">
                     <h2>Home project</h2>
-                    <p>The site was created using JavaScript and jQuery technology.</p>
-                    <a href="https://nbrzovan.github.io/iphoneStore/index.html"><img src="img/output3.png" alt="project1"/></a>
+                    <p>The website was created for the purpose of learning. Used frameworks Bootstrap and Materialize.</p>
+                    <a href="https://nbrzovan.github.io/CoffeShop/" target="_blank"><img src="img/output.png" alt="project"/></a>
+                </div>
+                <div class="pro hov">
+                    <h2>Home project</h2>
+                    <p>The site was created using JavaScript and jQuery technology.Also a school project created for the exam.</p>
+                    <a href="https://nbrzovan.github.io/iphoneStore/index.html" target="_blank"><img src="img/output3.png" alt="project1"/></a>
                 </div>
             </div>
             <div id="location">
@@ -169,7 +149,7 @@
             </div>
         </div>
         <footer>
-                <p>Copyright © 2020 Nikola Brzovan</p>
+                <p>Copyright © 2021 Nikola Brzovan</p>
         </footer>
     </body>
 </html>
